# MotionHub

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  LICENSE.txt  MMH_build_instructions.txt  README.md  ThirdPartyNotices.txt  USERDOC.md
src/: AKTracker.cpp  AKTracker.h  CMakeLists.txt  ConfigReader.cpp  ConfigReader.h  Console.cpp  Console.h  GestureManager.cpp  GestureManager.h  Joint.cpp  Joint.h  KeyboardEventHandler.h  MotionHub.cpp  MotionHub.h  NetworkManager.cpp  NetworkManager.h  NetworkSender.cpp  NetworkSender.h  OSCSender.cpp  OSCSender.h  Skeleton.cpp  Skeleton.h  StringParser.cpp  StringParser.h  Tracker.cpp  Tracker.h  TrackerManager.cpp  TrackerManager.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h  defines.h  main.cpp
src/3DRenderManagement/: CMakeLists.txt  ConfigDllExport3DRenderManagement.h  KeyboardEventHandler.cpp
src/FaceSynthesizing/: CMakeLists.txt
src/FaceSynthesizing/camera/: AzureKinectCamera.cpp  AzureKinectCamera.h  CameraRGBDI.cpp  CameraRGBDI.h  RGBDICamera.cpp  RGBDICamera.h
src/FaceSynthesizing/construction/: AzureKinectConstructor.cpp  AzureKinectConstructor.h  CameraConstructor.cpp  CameraConstructor.h  Constructor.cpp  Constructor.h  FaceSynthesizingBuilder.cpp  FaceSynthesizingBuilder.h  FaceSynthesizingConstructor.cpp  FaceSynthesizingConstructor.h  FileSystemConstructor.cpp  FileSystemConstructor.h  GUIConstructor.cpp  GUIConstructor.h  PythonConstructor.cpp  PythonConstructor.h  QtGUIConstructor.cpp  QtGUIConstructor.h
src/FaceSynthesizing/filesystem/: FileSystem.cpp  FileSystem.h
src/FaceSynthesizing/gui/: CaptureDataView.cpp  CaptureDataView.h  CaptureDataViewModel.h  GUICaptureDataView.cpp  GUICaptureDataView.h  GUICaptureDataViewModel.h  GUIConvertDataView.cpp  GUIConvertDataView.h  GUIConvertDataViewModel.h  GUIEventForwarder.cpp  GUIEventForwarder.h  GUIMessageViewModel.h  GUIPresenter.cpp  GUIPresenter.h  GUITab.h  GUITabView.cpp  GUITabView.h  GUITabViewModel.h  GUITrainingView.cpp  GUITrainingView.h  GUITrainingViewModel.h  GUIViewModel.cpp  GUIViewModel.h  MessageViewModel.h  QtCaptureDataView.cpp  QtCaptureDataView.h  QtCaptureDataView.ui  QtConvertDataView.cpp  QtConvertDataView.h  QtConvertDataView.ui  QtDataAlreadyExistsDialog.cpp  QtDataAlreadyExistsDialog.h  QtDataAlreadyExistsDialog.ui  QtTabView.cpp  QtTabView.h  QtTabView.ui  QtTrainingView .cpp  QtTrainingView.cpp  QtTrainingView.h  QtTrainingView.ui  (+8 more)
src/FaceSynthesizing/python/: FaceSynthesizer.cpp  FaceSynthesizer.h  IncludeBoostPython.h  PythonBoostModules.cpp  PythonBoostModules.h  PythonEnumUtils.cpp  PythonEnumUtils.h  PythonFaceSynthesizer.cpp  PythonFaceSynthesizer.h  PythonImageWrapper.cpp  PythonImageWrapper.h  PythonImporter.cpp  PythonImporter.h
src/FaceSynthesizing/usecases/: FaceSynthesizing.cpp  FaceSynthesizing.h  FaceSynthesizingCamera.h  FaceSynthesizingDataStructures.h  FaceSynthesizingEnums.cpp  FaceSynthesizingEnums.h  FaceSynthesizingFileSystem.h  FaceSynthesizingGUIInteractor.h  FaceSynthesizingGUIPresenter.h  FaceSynthesizingProject.h  FaceSynthesizingProjectInteractor.h
src/GestureManagement/: CMakeLists.txt  ConfigDllExportGestureManagement.h  GestureManager.cpp  GestureManager.h
src/MireviMotionHub/: CMakeLists.txt  MireviMotionHub.aps  MireviMotionHub.rc  MotionHub.cpp  MotionHub.cpp.orig  MotionHub.h  MotionHub_BACKUP_1041.h  MotionHub_BASE_1041.h  MotionHub_LOCAL_1041.h  MotionHub_LOCAL_2102.cpp.bak  MotionHub_REMOTE_2102.cpp.bak  main.cpp  resource.h
src/MotionHubUtil/: ButtonHelper.cpp  ButtonHelper.h  CMakeLists.txt  ChangeObserver.h  ConfigDllExportMotionHubUtil.h  ConfigManager.cpp  ConfigManager.h  ConfigReader.cpp  ConfigReader.h  Console.cpp  Console.h  Evaluation.h  Exception.h  GeodeFinder.cpp  GeodeFinder.h  HierarchicJoint.cpp  HierarchicJoint.h  HierarchicSkeleton.cpp  HierarchicSkeleton.h  IKJoint.h  IKSolver.cpp  IKSolver.h  IKSolverArm.cpp  IKSolverArm.h  IKSolverHip.cpp  IKSolverHip.h  IKSolverLeg.cpp  IKSolverLeg.h  IKSolverLimb.cpp  IKSolverLimb.h  IKSolverManager.cpp  IKSolverManager.h  IKSolverSpine.cpp  IKSolverSpine.h  InputManager.cpp  InputManager.h  Joint.cpp  Joint.h  Landmark.h  MMHUnitymath.h  (+26 more)
src/NetworkManagement/: CMakeLists.txt  ConfigDllExportNetworkManagement.h  NetworkManager.cpp  NetworkManager.h  NetworkSender.cpp  NetworkSender.h  OSCListener.cpp  OSCListener.h  OSCSender.cpp  OSCSender.h  defines.h
src/RenderManagement/: AxesCross.cpp  AxesCross.h  Bone.cpp  Bone.h  CMakeLists.txt  Camera.cpp  Camera.h  ConfigDllExportRenderManagement.h  CreateTrackerWindow.cpp  CreateTrackerWindow.h  CreateTrackerWindow.ui  Cube.cpp  Cube.h  Entity.cpp  Entity.h  GlWidget.cpp  GlWidget.h  Grid.cpp  Grid.h  Line.cpp  Line.h  MainWindow.cpp  MainWindow.h  MainWindow.qrc  MainWindow.ui  MainWindow.ui.autosave  Mesh.cpp  Mesh.h  NetworkSettingsWindow.cpp  NetworkSettingsWindow.h  NetworkSettingsWindow.ui  OsgAxesCross.cpp  OsgAxesCross.h  OsgBone.cpp  OsgBone.h  OsgGrid.cpp  OsgGrid.h  OsgLine.cpp  OsgLine.h  OsgQtWidget.cpp  (+26 more)
src/RenderManagement/mmhTimeline/: mmhTimeline.pro  mmhtimeline.cpp  mmhtimeline.h  (+2 more)
src/TrackerManagement/: AKTracker.cpp  AKTracker.h  BVHPlayer.cpp  BVHPlayer.h  CLTracker.cpp  CLTracker.h  CMakeLists.txt  ConfigDllExportTrackingManagement.h  DataHandlerManager.cpp  DataHandlerManager.h  OTTracker.cpp  OTTracker.h  OVRTracker.cpp  OVRTracker.cpp.orig  OVRTracker.h  OVRTracker_REMOTE_209.cpp.bak  OpenVRButtonSubject.h  OpenVRConfig.cpp  OpenVRConfig.h  OpenVRTracking.cpp  OpenVRTracking.h  PN2Tracker.cpp  PN2Tracker.h  PNSTracker.cpp  PNSTracker.h  Recorder.cpp  Recorder.h  RemoteCaptury.cpp  RemoteCaptury.h  Tracker.cpp  Tracker.cpp.orig  Tracker.h  Tracker.h.orig  TrackerGroup.cpp  TrackerGroup.h  TrackerManager.cpp  TrackerManager.h  Tracker_LOCAL_79.h.bak  Tracker_REMOTE_2463.h.bak  Tracker_REMOTE_79.h.bak  (+29 more)
src/UIManagement/: CMakeLists.txt  ConfigDllExportUIManagement.h  CreateTrackerWindow.cpp  CreateTrackerWindow.h  CreateTrackerWindow.ui  InputManager.cpp  InputManager.h  MainWindow.cpp  MainWindow.h  MainWindow.qrc  MainWindow.ui  UIManager.cpp  UIManager.h
(+2112 files in other folders)
